Backend arendus: Äriklassi ja economy-klassi istmesoovitusalgoritmi muutmine/implementeerimine.